--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/initialize.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -17,9 +18,55 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+
+    <script>
+
+    </script>
+
+    <style>
+        .centered {
+            width: 640px;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .header-wrapper {
+            width: 100%;
+        }
+
+        .input-box-wrapper {
+            width: 100%
+        }
+
+        .logo-box {
+            width: 380px;
+            height: 200px;
+        }
+    </style>
+
     <title>UrlMaker</title>
 </head>
 <body>
+<div>
+    <div class=centered>
+        <div class=header-wrapper>
+            <div class="logo-box">
+                <a href="index.html"><img src="image/sum_logo.png" alt=""></a>
+            </div>
+        </div>
 
+        <div class=input-box-wrapper>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Short Url Maker" aria-label="url-input"
+                       aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button class="input-group-text" id="basic-addon2">URL 생성!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
