--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,10 +33,9 @@
             });
             $.ajax({
                 type: "GET",
-                url: `/short-links/${url}`,
+                url: `/u/${url}`,
                 success: function (response) {
                     console.log(response)
-                    console.log(response["data"]["shortId"])
                 }
             });
             console.log("finished")
