--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/initialize.css">
+    <link rel="stylesheet" type="text/css" href="css/initialize.css">
+    <script src="js/index.js"></script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -17,78 +18,57 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-
-    <script th:inline="javascript" type="text/javascript">
-        function postUrl() {
-            let url = $('#text-input').val();
-            $.ajax({
-                type: "POST",
-                url: "/short-links",
-                contentType: "application/json",
-                data: JSON.stringify(url),
-                success: function () {
-                    console.log(url)
-                }
-            });
-            $.ajax({
-                type: "GET",
-                url: `/u/${url}`,
-                success: function (response) {
-                    console.log(response)
-                }
-            });
-            console.log("finished")
-        }
-    </script>
-
-    <style>
-        .centered {
-            width: 640px;
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .header-wrapper {
-            width: 100%;
-        }
-
-        .input-box-wrapper {
-            width: 100%
-        }
-
-        .logo-box {
-            width: 380px;
-            height: 200px;
-        }
-    </style>
 
     <title>UrlMaker</title>
 </head>
 <body>
-<div>
-    <div class=centered>
-        <div class=header-wrapper>
-            <div class="logo-box">
-                <a href="index.html"><img src="image/sum_logo.png" alt=""></a>
-            </div>
-        </div>
 
-        <div class=input-box-wrapper>
+<div class=centered>
+    <div class=header-wrapper>
+        <div class="logo-box">
+            <a href="/"><img src="image/sum_logo.png" alt=""></a>
+        </div>
+    </div>
+
+    <div class=input-box-wrapper>
+        <form class="form-class">
             <div class="input-group mb-3">
-                <form class="form-class">
-                <input type="text" class="form-control" placeholder="Short Url Maker" aria-label="url-input"
+                <input type="text" class="form-control" placeholder="ShortUrlMaker"
                        aria-describedby="basic-addon2" id="text-input">
                 <div class="input-group-append">
-                    <button type="button" class="input-group-text" id="basic-addon2" onclick="postUrl()">URL 생성!
+                    <button type="button" class="input-group-text" id="basic-addon2" onclick="postUrl()"
+                    >URL 생성!
                     </button>
                 </div>
-                </form>
+            </div>
+        </form>
+        <div class="input-group mb-3">
+        </div>
+    </div>
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" onclick="createUrl()">
+        URL 확인!
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Here is your SUM!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p id="shortUrl">URL을 생성하세요</p>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 </body>
 </html>
