--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,8 +36,8 @@
                 <input type="text" class="form-control" placeholder="ShortUrlMaker"
                        aria-describedby="basic-addon2" id="text-input">
                 <div class="input-group-append">
-                    <button type="button" class="input-group-text" id="basic-addon2" onclick="postUrl()"
-                    >URL 생성!
+                    <button type="button" class="input-group-text" id="basic-addon2" onclick="postUrl()">
+                        URL 생성
                     </button>
                 </div>
             </div>
@@ -48,7 +48,7 @@
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" onclick="createUrl()">
-        URL 확인!
+        URL 확인
     </button>
 
     <!-- Modal -->
