--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,9 @@
                 <input type="text" class="form-control" placeholder="ShortUrlMaker"
                        aria-describedby="basic-addon2" id="text-input">
                 <div class="input-group-append">
-                    <button type="button" class="input-group-text" id="basic-addon2" onclick="postUrl()">
+                    <!-- Button postUrl and trigger modal -->
+                    <button type="button" class="input-group-text" id="basic-addon2"
+                            onclick="postUrl()">
                         URL 생성
                     </button>
                 </div>
@@ -47,7 +49,8 @@
     </div>
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" onclick="createUrl()">
+    <button type="button" class="btn btn-primary"
+            data-toggle="modal" data-target="#exampleModal" onclick="checkUrl()">
         URL 확인
     </button>
 
@@ -63,7 +66,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p id="shortUrl">URL을 생성하세요</p>
+                    <p id="shortUrl">URL을 생성하세요!</p>
                 </div>
             </div>
         </div>
